# VideoAudioProject

AndroidMutilVideo/app/: build.gradle
AndroidMutilVideo/app/src/main/: AndroidManifest.xml
AndroidMutilVideo/gradle/wrapper/: gradle-wrapper.properties
AndroidMutilVideo03/: settings.gradle
AndroidMutilVideo04/app/: build.gradle
BiliBili/RtmpBiBili/RtmpBiBili/: settings.gradle
BiliBili/RtmpBiBili/RtmpBiBili/app/: build.gradle
BiliBili/RtmpBiBili/RtmpBiBili/gradle/wrapper/: gradle-wrapper.properties
BiliBili/RtmpManiu/: settings.gradle
BiliBili/RtmpManiu/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
BiliBili/RtmpManiu/app/src/main/cpp/librtmp/: CMakeLists.txt
BiliBili/RtmpManiuAudioPush/gradle/wrapper/: gradle-wrapper.properties
BiliBili/RtmpManiuYUVRGB/app/: build.gradle
BiliBili/RtmpManiuYUVRGB/app/src/main/: AndroidManifest.xml
BiliBili/RtmpManiuYUVRGB/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
BiliBili/X264RtmpManiu/app/: build.gradle
BiliBili/X264RtmpManiu/app/src/main/: AndroidManifest.xml
BiliBili/X264RtmpManiuCameraPush/app/: build.gradle
BiliBili/X264RtmpManiuCameraPush/app/src/main/: AndroidManifest.xml
BiliBili/X264RtmpManiuCameraPush/app/src/main/cpp/: CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  maniulog.h  native-lib.cpp
BiliBili/X264RtmpManiuCameraPush/gradle/wrapper/: gradle-wrapper.properties
BiliBili/X264RtmpManiuDetail/: settings.gradle
BiliBili/X264RtmpManiuDetail/app/: build.gradle
BiliBili/X264RtmpManiuDetail/app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp
DouyinClip/: settings.gradle
DouyinClip/app/: build.gradle
DouyinClip/app/src/main/: AndroidManifest.xml
DouyinClip/app/src/main/assets/: input.mp4下载.txt
DouyinClip/gradle/wrapper/: gradle-wrapper.properties
DouyinClipOneKeyMake/app/: build.gradle
FFmpegMusicPlayerHandSpeedPlay/app/: build.gradle
FFmpegMusicPlayerSpeedChange/: settings.gradle
FFmpegMusicPlayerSpeedChange/app/src/main/: AndroidManifest.xml
FFmpegMusicPlayerSpeedChange/gradle/wrapper/: gradle-wrapper.properties
GitHook/: settings.gradle
GitHook/app/: build.gradle
GitHook/app/src/main/: AndroidManifest.xml
GitHook/gradle/wrapper/: gradle-wrapper.properties
GitHook/hilt/: pre-commit
H264Maniu/: settings.gradle
H264Maniu/app/: build.gradle
H264Maniu/app/src/main/: AndroidManifest.xml
H264Maniu/gradle/wrapper/: gradle-wrapper.properties
H265ManiuPush/: settings.gradle
H265ManiuPush/app/: build.gradle
H265ManiuPush/app/src/main/: AndroidManifest.xml
H265ManiuPush/gradle/wrapper/: gradle-wrapper.properties
H265ManiuTouPin/: settings.gradle
H265ManiuTouPin/app/: build.gradle
H265ManiuTouPin/app/src/main/: AndroidManifest.xml
H265ManiuTouPin/gradle/wrapper/: gradle-wrapper.properties
ManiuIjk/app/: build.gradle
ManiuIjk/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ManiuIjkVideoSoftDecode/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ManiuMediaCodec_AudioCombine/: settings.gradle
ManiuMediaCodec_AudioCombine/app/: build.gradle
ManiuMediaCodec_AudioCombine/gradle/wrapper/: gradle-wrapper.properties
ManiuMediacodec/: settings.gradle
ManiuMediacodec/app/src/main/: AndroidManifest.xml
ManiuMediacodec/gradle/wrapper/: gradle-wrapper.properties
ManiuWebrtcRoom/: settings.gradle
ManiuWebrtcRoom/app/: build.gradle
ManiuWebrtcRoom/app/src/main/: AndroidManifest.xml
ManiuWebrtcRoom/gradle/wrapper/: gradle-wrapper.properties
ManiuWebrtcRoomNew1/: settings.gradle
ManiuWebrtcRoomNew1/app/: build.gradle
ManiuWebrtcRoomNew1/app/src/main/: AndroidManifest.xml
ManiuWebrtcRoomNew1/gradle/wrapper/: gradle-wrapper.properties
ManiuWebrtcoom/gradle/wrapper/: gradle-wrapper.properties
ManiuWebrtcoom2/app/: build.gradle
ManiuWebrtcoomFinished/: settings.gradle
ManiuWebrtcoomFinished/app/src/main/: AndroidManifest.xml
MediaCodecManiu/: settings.gradle
MediaCodecManiu/app/: build.gradle
MediaCodecManiu/app/src/main/: AndroidManifest.xml
MediaCodecManiu/gradle/wrapper/: gradle-wrapper.properties
MediaVideoManiu/: settings.gradle
MediaVideoManiu/app/: build.gradle
MediaVideoManiu/app/src/main/: AndroidManifest.xml
MediaVideoManiu/gradle/wrapper/: gradle-wrapper.properties
OpenGL/OpenglBBC/gradle/wrapper/: gradle-wrapper.properties
OpenGL/OpenglBBC2/: settings.gradle
OpenGL/OpenglBBC2/app/: build.gradle
OpenGL/OpenglImage/: settings.gradle
OpenGL/OpenglImage/app/: build.gradle
OpenGL/OpenglImage/gradle/wrapper/: gradle-wrapper.properties
OpenGL/OpenglRecordBeautyFilter/gradle/wrapper/: gradle-wrapper.properties
OpenGL/OpenglRecordBeautyFilterNoFBO/: settings.gradle
OpenGL/OpenglRecordDouyinFilter/app/: build.gradle
OpenGL/OpenglRecordEGL/app/: build.gradle
OpenGL/OpenglRecordSoulBeautyFilterPush/app/: build.gradle
WangyiMusicPlayer/: settings.gradle
WangyiMusicPlayer/app/src/main/cpp/: AndroidLog.h  (+7 more)
WangyiMusicPlayer/gradle/wrapper/: gradle-wrapper.properties
WangyiMusicPlayerDecodeAudioPlay/app/: build.gradle
WangyiMusicPlayerDecodeAudioPlay/app/src/main/: AndroidManifest.xml
WangyiMusicPlayerHandSpeedPlay/: settings.gradle
WangyiMusicPlayerHandSpeedPlay/app/src/main/: AndroidManifest.xml
WangyiMusicPlayerHandSpeedPlay/app/src/main/cpp/: CMakeLists.txt  MNAudio.cpp  MNCallJava.cpp  MNCallJava.h  MNFFmpeg.cpp  MNFFmpeg.h  MNPlaystatus.h  MNVideo.cpp  MNVideo.h
WangyiMusicPlayerNoise/app/src/main/cpp/: CMakeLists.txt  MNAudio.cpp  MNAudio.h  MNPlaystatus.cpp  native-lib.cpp
WebrtcManiuA/: settings.gradle
WebrtcManiuA/app/: build.gradle
WebrtcManiuA/app/src/main/: AndroidManifest.xml
WebrtcManiuA_Audio/app/src/main/: AndroidManifest.xml
WebrtcManiuA_Audio/gradle/wrapper/: gradle-wrapper.properties
WebrtcManiuB/app/src/main/: AndroidManifest.xml
WebrtcManiuB/gradle/wrapper/: gradle-wrapper.properties
WebrtcManiuB_Audio/: settings.gradle
WebrtcManiuB_Audio/app/: build.gradle
WebrtcManiuB_Audio/app/src/main/: AndroidManifest.xml
webrtc/gradle/wrapper/: gradle-wrapper.properties
(+501 files in other folders)
